--- a/app/views/shared/layout/_sidebar.html.erb
+++ b/app/views/shared/layout/_sidebar.html.erb
@@ -8,7 +8,7 @@
   <div class="sidebar">
     <div class="user-panel mt-3 pb-3 mb-3">
       <div class="info">
-        <h3 style="color: white;"><%= @working_team.name.truncate(15) %></h3>
+        <h3 style="color: white;"><%= Team.name.truncate(15) %>
       </div>
     </div>
 
